--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,6 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Run a sample makefile
+      - name: Run a sample GCP makefile to test standard3tier...
         run: |
-          make
+          (cd samples/GCP/templates/standard3tier/ && make)
