--- a/.github/workflows/testmakegcpsamples.yml
+++ b/.github/workflows/testmakegcpsamples.yml
@@ -30,3 +30,7 @@ jobs:
         run: |
           echo '(cd samples/GCP/templates/standard3tier/ && make)'
           cd samples/GCP/templates/standard3tier/ && make -i docker_test_lint docker_generate_docs
+      - name: Testing the lint standards for bastionhost (ignoring errors)...
+        run: |
+          echo '(cd samples/GCP/templates/bastionhost/ && make)'
+          cd samples/GCP/templates/bastionhost/ && make -i docker_test_lint docker_generate_docs
