--- a/.github/workflows/testmakegcpsamples.yml
+++ b/.github/workflows/testmakegcpsamples.yml
@@ -46,3 +46,8 @@ jobs:
           echo '(cd samples/GCP/templates/vpn-hybrid/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/GCP/templates/vpn-hybrid/ && make -i docker_test_lint docker_generate_docs)
+      - name: Testing the lint standards for kubernetes (ignoring errors)...
+        run: |
+          echo '(cd samples/GCP/templates/kubernetes/ && make)'
+          echo '>>Ignore module errors and header errors<<'
+          (cd samples/GCP/templates/kubernetes/ && make -i docker_test_lint docker_generate_docs)
