--- a/.github/workflows/testmakegcpsamples.yml
+++ b/.github/workflows/testmakegcpsamples.yml
@@ -26,28 +26,33 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Testing the lint standards for standard3tier (ignoring errors)...
+      - name: Testing the lint standards for GCP standard3tier (ignoring errors)...
         run: |
           echo '(cd samples/GCP/templates/standard3tier/ && make)'
           echo '>>Ignore header errors<<'
           (cd samples/GCP/templates/standard3tier/ && make -i docker_test_lint docker_generate_docs)
-      - name: Testing the lint standards for bastionhost (ignoring errors)...
+      - name: Testing the lint standards for GCP bastionhost (ignoring errors)...
         run: |
           echo '(cd samples/GCP/templates/bastionhost/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/GCP/templates/bastionhost/ && make -i docker_test_lint docker_generate_docs)
-      - name: Testing the lint standards for vpn-classic (ignoring errors)...
+      - name: Testing the lint standards for GCP vpn-classic (ignoring errors)...
         run: |
           echo '(cd samples/GCP/templates/vpn-classic/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/GCP/templates/vpn-classic/ && make -i docker_test_lint docker_generate_docs)
-      - name: Testing the lint standards for vpn-hybrid (ignoring errors)...
+      - name: Testing the lint standards for GCP vpn-hybrid (ignoring errors)...
         run: |
           echo '(cd samples/GCP/templates/vpn-hybrid/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/GCP/templates/vpn-hybrid/ && make -i docker_test_lint docker_generate_docs)
-      - name: Testing the lint standards for kubernetes (ignoring errors)...
+      - name: Testing the lint standards for GCP kubernetes (ignoring errors)...
         run: |
           echo '(cd samples/GCP/templates/kubernetes/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/GCP/templates/kubernetes/ && make -i docker_test_lint docker_generate_docs)
+      - name: Testing the lint standards for AZ kubernetes (ignoring errors)...
+        run: |
+          echo '(cd samples/Azure/templates/kubernetes/ && make)'
+          echo '>>Ignore module errors and header errors<<'
+          (cd samples/Azure/templates/kubernetes/ && make -i docker_test_lint docker_generate_docs)
