--- a/.github/workflows/testmakegcpsamples.yml
+++ b/.github/workflows/testmakegcpsamples.yml
@@ -66,3 +66,8 @@ jobs:
           echo '(cd samples/Azure/templates/vpn-classic/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/Azure/templates/vpn-classic/ && make -i docker_test_lint docker_generate_docs)
+      - name: Testing the lint standards for AZ vpn-hybrid (ignoring errors)...
+        run: |
+          echo '(cd samples/Azure/templates/vpn-hybrid/ && make)'
+          echo '>>Ignore module errors and header errors<<'
+          (cd samples/Azure/templates/vpn-hybrid/ && make -i docker_test_lint docker_generate_docs)
