--- a/.github/workflows/testmakegcpsamples.yml
+++ b/.github/workflows/testmakegcpsamples.yml
@@ -76,5 +76,11 @@ jobs:
           echo '(cd samples/Azure/templates/standard3tier/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/Azure/templates/standard3tier/ && make -i docker_test_lint docker_generate_docs)
+      - name: Security scan...
+        run: |
+          echo 'Running terrascan to show security issues...'
+          (cd samples && docker run --rm -v "$(pwd):/iac" -w /iac accurics/terrascan scan)
+
+
 
 
