--- a/.github/workflows/testmakegcpsamples.yml
+++ b/.github/workflows/testmakegcpsamples.yml
@@ -76,7 +76,7 @@ jobs:
           echo '(cd samples/Azure/templates/standard3tier/ && make)'
           echo '>>Ignore module errors and header errors<<'
           (cd samples/Azure/templates/standard3tier/ && make -i docker_test_lint docker_generate_docs)
-      - name: Security scan...
+      - name: Security scan (ignoring errors)...
         run: |
           echo 'Running terrascan to show security issues (ignore error codes)...'
           (cd samples && (docker run --rm -v "$(pwd):/iac" -w /iac accurics/terrascan scan || true))
